feat: comments full CRUD and documentation.
