# src/routes/commentRoutes.js
@@ -1,0 +1,40 @@
+import express from 'express';
+import {
+    getAllCommentsHandler,
+    getCommentByIdHandler,
+    createCommentHandler,
+    updateCommentHandler,
+    deleteCommentHandler,
+} from '../controllers/commentController.js';
+
+import {
+    validateId,
+    validateCreateComment,
+    validateUpdateComment,
+    //validateCommentQuery,
+} from '../middleware/commentValidators.js';
+
+import { authenticate } from '../middleware/authenticate.js';
+import { authorizeCommentOwnership, } from '../middleware/authorizeOwnership.js';
+
+const router = express.Router();
+router.get('/', /*validateCommentQuery*/ getAllCommentsHandler);
+router.get('/:id', validateId, getCommentByIdHandler);
+router.post('/', authenticate, validateCreateComment, createCommentHandler);
+router.put(
+    '/:id',
+    authenticate,
+    validateId,
+    authorizeCommentOwnership,
+    validateUpdateComment,
+    updateCommentHandler,
+);
+router.delete(
+    '/:id',
+    authenticate,
+    validateId,
+    authorizeCommentOwnership,
+    deleteCommentHandler,
+);
+
+export default router;
